Fixing offscreen SVG animation oddities

--- a/showboat/payload/styles/presentation.css
+++ b/showboat/payload/styles/presentation.css
@@ -1,3 +1,4 @@
+/* Top-level structure */
 body {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -9,43 +10,6 @@ body {
   background-color: white;
   font-family: "Myriad Pro", "Myriad", sans-serif;
   font-size: 14pt;
-}
-
-div.fullscreen svg{
-  width:100%;
-  height:100%;
-}
-
-/* Non-rendering items */
-div.build { display: none; }
-div.notes { display: none; }
-div.title { display: none; }
-
-/* Table of contents */
-div#toc {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 15%;
-  height: 100%;
-  padding: 1%;
-  background: rgba(0,0,0, 0.8);
-  opacity: 80%;
-  color: black;
-  z-index: 300;
-  overflow: auto;
-  display: none;
-}
-
-div#toc li {
-  width: 100%;
-}
-
-div#toc img {
-  width: 100%;
-  height: auto;
-  max-height: 12%;
 }
 
 div.slide {
@@ -65,27 +29,72 @@ div.slide {
   height:100%;
   margin: auto;
   position: relative;
+/*  display:hidden;*/
 }
 
-/*div.slide:after{
-  content: '';
-  display: inline-block;
+/* Non-rendering items */
+
+div.build { display: none; }
+div.notes { display: none; }
+div.title { display: none; }
+
+
+/* Table of contents */
+
+div#toc {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 10%;
   height: 100%;
-  vertical-align: middle;
-  margin-right: -0.25em; 
-}*/
+  padding: 5;
+  background: rgba(0,0,0, 0.8);
+  opacity: 80%;
+  color: black;
+  z-index: 300;
+  overflow: auto;
+  display: none;
+}
+
+div#toc li {
+  width: 100%;
+}
+
+div#toc a {
+  color: white;
+}
+
+div#toc img {
+  width: 100%;
+  height: auto;
+  max-height: 12%;
+}
+
+/* Images */
 
 img {
   max-width:100%; 
   max-height:100%;
 }
 
-img.fs {
+img.fullscreen {
   vertical-align: 'center';
   width: 100%;
   height: 100%;
 }
 
+.fullscreen svg {
+  width: 100%;
+  height: 100%;
+}
+
+.fullscreen img {
+  width: 100%;
+  height: 100%;
+}
+
+/* Headers and text */
 
 h1,h2,h3 { font-weight: normal; text-align: center; margin: 0.5em 0; }*/
 h1 { font-size: 5em; }
@@ -94,14 +103,21 @@ h3 { font-size: 2em; }
 
 pre { margin: 1em 40px; padding: .25em; }
 
-.notes { display: none }
-.hidden { position:absolute; top:0; left:-9999px; width:1px; height:1px; overflow:hidden; }
 
-
-.grayed_out {
-  opacity: 0.25;
+/* Pre-defined positions for text and other stuff */
+.text_right{
+  text-align: right;
 }
 
+.lower_right{
+  position: absolute;
+  bottom: 10%;
+  right:10%;
+  height: 25%;
+}
+
+
+/* Stuff that's not quite working... */
 div.relative_wrapper {
   position: relative;
   width: 100%;
@@ -132,14 +148,4 @@ div.vertically_centered{
   display: inline-block;*/
 }
 
-.text_right{
-  text-align: right;
-}
-
-.lower_right{
-  position: absolute;
-  bottom: 10%;
-  right:10%;
-  height: 25%;
-}
 
